--- a/style1.css
+++ b/style1.css
@@ -10,6 +10,14 @@ html, body{
     background-size: cover;
     background-position: center;
     width: 100%;}
+    
+    .entêt_blog{
+        background: url("images/IMG_20210306_182924_093 1.png") no-repeat;
+        height:  100vh;
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+    }
     .couleurbout{
         background-color: #FF477E;
         border-radius: auto;
@@ -23,14 +31,14 @@ html, body{
     }
     .ndparagraph{
         margin-top: 6rem;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: 'Lora', serif;
         font-size: small;
         justify-content: center;
         text-align: center;
     }
     .fourthparagraph{
         margin-top: 5rem;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: 'Lora', serif;
         font-size: small;
         justify-content: center;
         text-align: center;
@@ -55,7 +63,6 @@ html, body{
     }
     .justif_txt{
          text-align: justify;     
-        max-width: 35%;
         margin-left: -3rem !important;
     }
     .couleurdefond{
@@ -64,7 +71,7 @@ html, body{
     .rdparagraph{
         padding-top: 3rem;
         margin-top: -2rem;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: 'Lora', serif;
         font-size: small;
         justify-content: center;
         text-align: center;
@@ -127,14 +134,33 @@ html, body{
     background-color: #FF477E;
     color: white;
   }
+  .part{
+      padding-top: 2rem;
+  }
     .partenaires{
-        margin-top:3rem;
+        margin-top: 2rem;
     }
     .soutient{
-        
-        height: fit-content;
-        font-family: 'Times New Roman', Times, serif;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+        font-family: 'Lora', serif;
         font-size: 1.5rem;
         font-weight: 200;
+        justify-content: center;
         
+    }
+
+
+
+
+
+
+    .support{
+        background: #FFFFFF;
+        border-radius: 15px;
+        font-family: 'Poppins', sans-serif;
+        color: #636C77;
+    }
+    .blogrougecolor{
+        color: #A31A2F;
     }
