--- a/style1.css
+++ b/style1.css
@@ -11,7 +11,14 @@ html, body{
     background-position: center;
     width: 100%;}
     
-    
+    .imlog{
+width: 6rem;
+left: 188px;
+top: -206px;
+border-radius: 0px;
+margin-left: 45%;
+
+    }
     
     .couleurbout{
         background-color: #FF477E;
@@ -25,7 +32,7 @@ html, body{
         text-align: center;    
     }
     .ndparagraph{
-        margin-top: 6rem;
+        margin-top: 4rem;
         font-family: 'Lora', serif;
         font-size: small;
         justify-content: center;
@@ -49,8 +56,8 @@ html, body{
 
     
     .carousel-inner{
-        height: 35rem;
-        width: 35rem;
+        height: 50rem;
+        width: 40rem;
     }
     .margecarousel{
         margin-top: 3rem;
@@ -71,18 +78,17 @@ html, body{
         justify-content: center;
         text-align: center;
     }
-    .card-text{
+    .cardetext{
         text-align: justify;
-        min-height: 25vh;
 
     }
-   
+    
     .bi-eye{
         
         font-size: 5%;
         margin-bottom: 3rem;
         margin-top: 1.5rem;
-        margin-left: 5.5rem;
+        margin-left: 7rem;
         color: black;
     }
     .card-titl{
@@ -90,7 +96,7 @@ html, body{
         justify-content: center;
         margin-bottom: 1rem;
     }
-    .card-title{
+    .titrecorri{
         text-align: left;
         justify-content: left;
         margin-bottom: 1rem;
@@ -110,7 +116,7 @@ html, body{
         background-color:#FF477E ;
         width: 3rem;
         height: 0.1rem;
-        margin-left: 5.1rem;
+        margin-left: 6.8rem;
        margin-top:-2rem;
        margin-bottom: 1rem; 
  }
@@ -134,6 +140,10 @@ html, body{
   }
     .partenaires{
         margin-top: 2rem;
+    }
+    .partenaire{
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
     }
     .soutient{
         margin-top: 3rem;
@@ -198,7 +208,7 @@ html, body{
     }
     .imgalaune{
 
-        background: url("images/image\ 9\ \(1\).png") no-repeat;
+        background: url("images/image\ 9.png") no-repeat;
         height:  80vh;
         background-size: cover;
         background-position: center;
@@ -228,6 +238,48 @@ html, body{
     }
     .art{
         font-family: 'Poppins', sans-serif;
-        font-weight: 300;
-        font-size: 1.5rem;
+        font-weight: 400;
+        font-size: 1.3rem;
+        left: 106px;
+        color: black;
+        margin-top: 1.5rem;
+        margin-left: 0.3rem;
     }
+    .livre{
+        vertical-align: 0%;
+    }
+    .maart{
+        margin-top: 5rem;
+    }
+    
+    .sit{
+        text-align: justify;
+        min-height: 20vh;
+    }
+    .partir{
+        margin-bottom: 3rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+          }
+          
+     .plusart{
+         margin-left: 47%;
+     }
+     .imgart1{
+
+        background: url("images/imagesmens.jpg") no-repeat;
+        height:  80vh;
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+    }
+    .imgart2{
+
+        background: url("images/unnamed\ \(3\).jpg") no-repeat;
+        height:  80vh;
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+    }
+     
+     
