--- a/style2.css
+++ b/style2.css
@@ -77,7 +77,7 @@ html, body{
     
     }
     .serviette {
-
+        width: 100%;
         height: 350px;
         margin-top: 5rem;
     
@@ -89,6 +89,8 @@ html, body{
         height: 300px;
         color: white;
         padding-top:40px;
+        width: 100%;
+
     
     
     }
